--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap"><header class="u-clearfix u-custom-color-2 u-header u-sticky u-header" id="sec-c9e0"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-overlap"><header class="u-clearfix u-custom-color-2 u-header u-sticky u-header" id="sec-c9e0"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://qi.ucsd.edu/" class="u-image u-logo u-image-1" data-image-width="726" data-image-height="430">
           <img src="images/pngkit_ucsd-logo-png_2095482.png" class="u-logo-image u-logo-image-1" data-image-width="81.4286">
         </a>
